--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preinstall": "npx only-allow pnpm",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.ts",
-    "vhost": "nodemon ./src/hostserver.ts"
+    "vhost": "nodemon ./src/hostserver.ts",
+    "auth": "nodemon ./src/authserver.ts"
   },
   "keywords": [],
   "author": "",
