--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@ USERNAME=<YOUR USERNAME>
 PASSWORD=<YOUR PASSWORD>
 SECRET_JWT__REFRESH_KEY=secret
 SECRET_JWT_KEY=secret
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="file:./dev.db"
