--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
     "nodemon": "^2.0.19",
+    "prisma": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
