--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preinstall": "npx only-allow pnpm",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.ts",
+    "bcrypt": "nodemon ./src/bcrypt.ts",
+    "bcryptjs": "nodemon ./src/bcryptjs.ts",
     "vhost": "nodemon ./src/hostserver.ts",
     "auth": "nodemon ./src/authserver.ts"
   },
@@ -18,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
