--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie": "^0.5.0",
@@ -28,6 +27,7 @@
     "vhost": "^3.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
